; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/extr_beat_interrupt.c_beatic_pic_host_map.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/extr_beat_interrupt.c_beatic_pic_host_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_host = type { i32 }
%struct.irq_desc = type { i32 }

@EIO = common dso_local global i32 0, align 4
@IRQ_LEVEL = common dso_local global i32 0, align 4
@beatic_pic = common dso_local global i32 0, align 4
@handle_fasteoi_irq = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.irq_host*, i32, i32)* @beatic_pic_host_map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @beatic_pic_host_map(%struct.irq_host* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.irq_host*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.irq_desc*, align 8
  %9 = alloca i64, align 8
  store %struct.irq_host* %0, %struct.irq_host** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call %struct.irq_desc* @get_irq_desc(i32 %10)
  store %struct.irq_desc* %11, %struct.irq_desc** %8, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* %7, align 4
  %14 = call i64 @beat_construct_and_connect_irq_plug(i32 %12, i32 %13)
  store i64 %14, i64* %9, align 8
  %15 = load i64, i64* %9, align 8
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %3
  %18 = load i32, i32* @EIO, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %4, align 4
  br label %29

20:                                               ; preds = %3
  %21 = load i32, i32* @IRQ_LEVEL, align 4
  %22 = load %struct.irq_desc*, %struct.irq_desc** %8, align 8
  %23 = getelementptr inbounds %struct.irq_desc, %struct.irq_desc* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = or i32 %24, %21
  store i32 %25, i32* %23, align 4
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* @handle_fasteoi_irq, align 4
  %28 = call i32 @set_irq_chip_and_handler(i32 %26, i32* @beatic_pic, i32 %27)
  store i32 0, i32* %4, align 4
  br label %29

29:                                               ; preds = %20, %17
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local %struct.irq_desc* @get_irq_desc(i32) #1

declare dso_local i64 @beat_construct_and_connect_irq_plug(i32, i32) #1

declare dso_local i32 @set_irq_chip_and_handler(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
